examples/invalid_feature_secret/harness_secret_provider_mismatch.argx
module invalid.harness_secret_provider_mismatch
provider OpenAI { kind external enabled false dry_run_only true requires feature_flag requires approval }
provider OtherProv { kind external enabled false dry_run_only true requires feature_flag requires approval }
secret OpenAISecret { handle "OPENAI_API_KEY" provider OtherProv scope adapter access denied source none }
harness H { provider OpenAI secret OpenAISecret mode dry_run network denied secrets denied filesystem none }
